--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -22,7 +22,7 @@
 		  <span class="point"> · </span>
           <span><a href="{{ "/feed.xml" | prepend: site.baseurl }}">RSS</a></span>
           <span class="point"> · </span>
-          <span>&copy; 2015 LiXizhi</span>
+          <span>&copy; 2022 zhengyinloong（郑银龙）</span>
       </div>
     </div>
   </div>
