--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,7 +7,7 @@
 	
 	<link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 	<link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
-	<link rel="shortcut icon" href="https://avatars.githubusercontent.com/u/97682365?v=4" type="image/x-icon">
+	<link rel="shortcut icon" href="https://images.cnblogs.com/cnblogs_com/blogs/726717/galleries/2097126/t_e1644eea.png" type="image/x-icon">
 	<!-- <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}"> -->
     
     <link rel="stylesheet" type="text/css" href="{{"/static/css/bootstrap.min.css" | prepend: site.baseurl }}">
