--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,7 +11,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="{{ site.baseurl }}/">{{ site.title }}</a>
+      <a class="navbar-brand" href="{{ site.baseurl }}/"> <img src='https://images.cnblogs.com/cnblogs_com/blogs/726717/galleries/2097126/t_e1644eea.png' alt='logo' height=25px/>{{ site.title }}</a>
       <p class="navbar-text"></p>
     </div>
     <!-- Collect the nav links, forms, and other content for toggling -->
