--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,18 +11,18 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="{{ site.baseurl }}/"> <img src='https://repository-images.githubusercontent.com/448230914/d5eaaf11-066e-484a-b32d-6619adda94c0' alt='logo' height=25px style="display:inline;"/>{{ site.title }}</a>
+      <a class="navbar-brand" href="{{ site.baseurl }}/">{{ site.title }}</a>
       <p class="navbar-text"></p>
     </div>
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
 
-        {% if page.url == "/index.html" %}
+<!--         {% if page.url == "/index.html" %}
           <li class="active">
           {% else %}
           <li>
-        {% endif %}
+        {% endif %} -->
         <a href="{{ site.baseurl }}/">Home</a></li>
 
         {% for p in site.pages %}
