--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,11 +18,11 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
 
-<!--         {% if page.url == "/index.html" %}
+        {% if page.url == "/index.html" %}
           <li class="active">
           {% else %}
           <li>
-        {% endif %} -->
+        {% endif %}
         <a href="{{ site.baseurl }}/">Home</a></li>
 
         {% for p in site.pages %}
