--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -23,9 +23,10 @@
           <span><a href="{{ "/feed.xml" | prepend: site.baseurl }}">RSS</a></span>
           <span class="point"> · </span>
           <span>&copy; 2022 zhengyinloong</span>
-	      <span id="busuanzi_container_site_pv" style="display: inline;">本站总访问量 <a href="//busuanzi.ibruce.info"
-                target="_blank"><span id="busuanzi_value_site_pv">994473</span></a></span>
-        <script async="" src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
+	  <span class="point"> · </span>
+	  <span id="busuanzi_container_site_pv" style="display: inline;">本站总访问量 <a href="//busuanzi.ibruce.info"
+              target="_blank"><span id="busuanzi_value_site_pv"></span></a></span>
+          <script async="" src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
       </div>
     </div>
   </div>
