--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,7 +24,7 @@
           <span class="point"> · </span>
           <span>&copy; 2022 zhengyinloong</span>
 	  <span class="point"> · </span>
-	  <span id="busuanzi_container_site_pv" style="display: inline;">本站总访问量 <a href="//busuanzi.ibruce.info"
+	  <span id="busuanzi_container_site_pv" style="display: inline;">Total Site visits <a href="//busuanzi.ibruce.info"
               target="_blank"><span id="busuanzi_value_site_pv"></span></a></span>
           <script async="" src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
       </div>
