--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,8 +6,8 @@ layout: default
     <div class="post-area post">
       <header>
         <h1>{{ page.title }}</h1>
-        <p>{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}<span id="busuanzi_container_page_pv">
-   • Total reading of this article <span id="busuanzi_value_page_pv"></span></span></p>
+        <p align='center'>{% if page.tags %} • {{ page.tags }}{% endif %}{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}<span id="busuanzi_container_page_pv">
+   • Total reading of this article <code><span id="busuanzi_value_page_pv"></span></code></span></p>
       </header>
       <hr>
       <article>
