--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,16 +7,10 @@ layout: default
       <header>
         <h1>{{ page.title }}</h1>
         <p align='left'>
-          {{ page.date | date: "%b %-d, %Y" }}&nbsp;|&nbsp;
-
-          <code>
+          {{ page.date | date: "%b %-d, %Y" }}
           {% if page.tags %}
-          {{ page.tags }}
-          {% else %}
-          no tags
+          &nbsp;|&nbsp;<code>{{ page.tags }}</code>
           {% endif %}
-          </code>
-          
           {% if page.author %}
           &nbsp;|&nbsp;{{ page.author }}
           {% endif %}
