--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,7 @@ layout: default
         <p align='left'>
           {{ page.date | date: "%b %-d, %Y" }}
           {% if page.tags %}
-          &nbsp;|&nbsp;<code>{{ page.tags }}</code>
+          &nbsp;|&nbsp;{{ page.tags }}
           {% endif %}
           {% if page.author %}
           &nbsp;|&nbsp;{{ page.author }}
