--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,8 +14,9 @@
 
     
     <div id="top" data-toggle="tooltip" data-placement="left" title="back to top">
-      <a href="javascript:;">
-        <div class="arrow"></div>
+      <a href="#">
+        <!-- <a href="javascript:;"> -->
+          <div class="arrow"></div>
         <div class="stick"></div>
       </a>
     </div>
