--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,8 +8,8 @@ layout: default
         <h1>{{ page.title }}</h1>
         <p align='left'>
           {{ page.date | date: "%b %-d, %Y" }}
-          {% if page.tags %}
-          &nbsp;|&nbsp;{{ page.tags }}
+          {% if page.tag %}
+          &nbsp;|&nbsp;{{ page.tag }}
           {% endif %}
           {% if page.author %}
           &nbsp;|&nbsp;{{ page.author }}
