--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,7 +7,7 @@
 	
 	<link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 	<link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
-	<link rel="shortcut icon" href="https://repository-images.githubusercontent.com/448230914/d5eaaf11-066e-484a-b32d-6619adda94c0" type="image/x-icon">
+	<link rel="shortcut icon" href="/static/img/logo.png" type="image/x-icon">
 	<!-- <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}"> -->
     
     <link rel="stylesheet" type="text/css" href="{{"/static/css/bootstrap.min.css" | prepend: site.baseurl }}">
