--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,16 +5,15 @@
 
  <!--  <body data-spy="scroll" data-target="#myAffix"> -->
   <body>
-
+    <a name="TOP"></a>
     {% include header.html %}
 
     <div id="main" class="container main">
       {{ content }}
     </div>
 
-    
     <div id="top" data-toggle="tooltip" data-placement="left" title="back to top">
-      <a href="#">
+      <a href="#TOP">
         <!-- <a href="javascript:;"> -->
           <div class="arrow"></div>
         <div class="stick"></div>
