--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,6 +5,7 @@ layout: default
   <div id="myArticle" class="col-sm-9">
     <div class="post-area post">
       <header>
+        <a name="TOP"></a>
         <h1>{{ page.title }}</h1>
         <p align='left'>
           {{ page.date | date: "%b %-d, %Y" }}
